Closed Bug 288156 Opened 21 years ago Closed 21 years ago

Hardcoded appname in messenger.properties (filterFolderTruncateFailed)

Categories

(MailNews Core :: Backend, defect)

x86
All
defect
Not set
minor

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: standard8, Assigned: standard8)

References

()

Details

Attachments

(1 file)

The property filterFolderTruncateFailed in messenger.properties hardcodes the short name of the application: "There was an error truncating the Inbox after filtering a message to folder '%S'. You may need to shutdown Mozilla and delete INBOX.msf." The "Mozilla" should be changed to use brand short name as very soon, we won't even have any product called "Mozilla" on the trunk any more (see bug 285696).
Attached patch Patch v1Splinter Review
Patch so that we don't hardcode the appname in messenger.properties - fixes both Suite & TB.
Attachment #178954 - Flags: review?(neil.parkwaycc.co.uk)
Comment on attachment 178954 [details] [diff] [review] Patch v1 Seems reasonable, though I've got no idea how to test it.
Attachment #178954 - Flags: review?(neil.parkwaycc.co.uk) → review+
Attachment #178954 - Flags: superreview?(mscott)
Attachment #178954 - Flags: superreview?(mscott) → superreview+
Patch checked in for Mark, marking FIXED.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
*** Bug 287693 has been marked as a duplicate of this bug. ***
Verified FIXED by code inspection via LXR, where I can verify that messenger.properties doesn't hard-code the app name anymore, and through the other changes, which show where it does come from...
Status: RESOLVED → VERIFIED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: