bug 288156 - Hardcoded appname in messenger.properties (filterFolderTruncateFailed), patch by Mark Banner <bugzilla@standard8.demon.co.uk>, r=Neil sr=mscott